# beast2

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  README.md  beast-c-coding-style-v0.1.md
cmake/: Beast2DesktopDeps.cmake  Beast2Sqlite.cmake
config/: beast2.conf
docs/: # Beast2 Artifact and Lineage Model.md  # Beast2 Philosophy Beautiful Means.md  # Feature Latent Bookmarks.md  Beast Must Feel Like a Game.md  Beast2 Architecture Documentation Overview.md  Beast2 Design Principles.md  Beast2 Desktop Feature Noise Explorer.md  Beast2 Development Roadmap & Implementation Order.md  Beast2 GPU Scheduler Architecture.md  Beast2 Generator Execution Engine.md  Beast2 Latent Space Explorer Architecture.md  Beast2 Media Library & Database Architecture.md  Beast2 Model Runtime Layer Architecture.md  Beast2 Starter Generator Pack.md  Beast2 UI Architecture.md  Example Generators Included With Beast2.md  Testing Strategy.md  The Beast2 Creative Workflow.md  The Beast2 Philosophy of Local AI.md  Why Beast2 Exists.md  beast architecture doc.md  beast directional numeral standard v1.0.md  beast threading memory caching scheduling 01 to 10.md  beast-check.md  beast-cli-v0.1.md  beast-english-v0.1.md  beast-english-v0.2.md  beast-is-lazy-canonical.md  beast-job-dispatcher-v0.1.md  beast-language-acronyms-special-definitions.md  beast-language-usage-world-vs-self-v0.1.md  beast-languages-v0.6.md  beast-llm-1.0.md  beast-phonetic-dictionary-v0.5.md  beast-phonetics-v0.1.md  beast-raylib-v0.1.md  beast-ui-implementation-spec-v0.1.md  beast-voice-pipeline-phased-implementation-plan.md  beast-voice-pipeline.md  beast-voice-test-suite.md  (+14 more)
docs/beast2-c-ui/: BUILD.md  README.md  plan.md  ui-reimplementation-phases.md  ui-spec-inventory.md
docs/chats/: # Beast2-2.md  # Feature Latent Diff Viewer.md  # Local AI Philosophy.md  # beast2-academy ## Lesson 1 — The Long Game.md  # beast2-academy## Lesson 2 — Curiosity Engines.md  # beast2-to-beast3-roadmap.md  # beast3-architecture.md  # beast3-archive-philosophy.md  # beast3-command-model.md  # beast3-design-principles.md  # beast3-manifesto-2.md  # beast3-manifesto.md  # creator-psychology.md  # reproducibility-verification-and-compute-integrity.md  # telepathy-concept-communication-bitrate-first-steps-2.md  # the-twelve-beast-axioms-3.md  # unable-to-comply-commands-vs-prompts.md  # why-beast1-against-non-deterministic-compute.md  ## How Beast2 Works-2.md  ## why-beast1-against-non-deterministic-compute-v2-3.md  $b2_superpowers_section.md  -index  000  10 percent max  10 second pitch for email or text.md  2 ai software dev  2014 04 16 after lecture 10ish  2016 04 15 beastmode realtime  2016 04 15 comms post cdi  2016 04 16 progress  2016 4 14 beast2 ai  2017 04 17 3 ambitous enough  2017 04 18 infinite beastmode filibuster marketing  2026 04 17  2026 04 17 2  2026 4 14 beast command language spec draft  2026 4 14 tranformers  2026-03  26-04-20-lecture.md  26-04-22-plans.md  (+349 more)
docs/chats/beast2ai/: AGENTS.md  architecture.md  b2_format1.md  b2_tools.md  b2_tools2.md  beast2ai.md  constitution-b2_agent-2.md  constitution-b2_agent.md  context-engineering.md  decisions.md  essay.md  memory-system.md  memory.md  philosophy.md  temp.md  ui-architecture.md
docs/chats/wsp/: design.md
docs/features/: beast2-backend-architecture-expanded.md  beast2-backend-architecture.md  beast2-latent-space-explorer-architecture.md  beast2-media-library-database-architecture.md  beast2-model-runtime-layer-architecture.md  beast2-ui-architecture.md
docs/generators/: phase-1-parser-reference.md
docs/marketing/: ## What Is a Generator.md  Beast2 — The 60-Second Explanation.md  HN-draft Beast2 — a local AI workbench for building reusable generators.md  The Generator Economy.md  the beast2 mailman
docs/spec drafts/: 2026-04-14-beast2-README.md  2026-04-14-pipeline-spec-draft-1  beast comms design 1  beast-acronyms-words-numbered.md  beast-captain-pilot-architecture-v0.1.md
docs/website/: 2026-04-14-marketing copy  beast2-gold3.html  gold copy 2  gold copy 3  gold marketing copy  readme.md
examples/: llama-generator-editor-demo.b2  qwen-belief-conditioning-demo.b2  qwen-local-encyclopedia-demo.b2  qwen-prompt-mutator-demo.b2  sdxl_character_concept.b2  wan22-short-video-demo.b2  wan22_walk_cycle.b2
include/beast2/: app.h  c_compat.h  config.h  executor.h  filesystem.h  knowledge_db.h  latent_explorer.h  latent_library.h  llm_integration.h  logger.h  media_library.h  parser.h  runtime.h  scheduler.h  tensor_memory.h
scripts/: dedupe_numbered_exports.py
src/: app.c  config.c  executor.c  filesystem.c  knowledge_db.c  latent_explorer.c  latent_library.c  llm_integration.c  logger.c  main.c  media_library.c  parser.c  runtime.c  scheduler.c  tensor_memory.c
src/desktop/: desktop_execution.c  desktop_execution.h  gallery_model.c  gallery_model.h  main.c  media_bridge.c  media_bridge.h  theme.h  ui_chrome.c  ui_chrome.h  ui_context_menu.c  ui_context_menu.h  ui_draw.c  ui_draw.h  ui_fonts.c  ui_fonts.h  ui_gallery.c  ui_gallery.h  ui_hotkeys.c  ui_hotkeys.h  ui_infobar.c  ui_infobar.h  ui_input.c  ui_input.h  ui_layout.c  ui_layout.h  ui_scale.c  ui_scale.h  ui_selection.c  ui_selection.h  ui_shell.c  ui_shell.h  ui_sidebar.c  ui_sidebar.h  ui_toast.c  ui_toast.h  workflow_panel.c  workflow_panel.h
tests/: CMakeLists.txt  test_config.c  test_execution.c  test_explorer.c  test_filesystem.c  test_llm.c  test_parser.c  test_runtime.c  test_scheduler.c  test_support.c  test_support.h  test_tensor_memory.c
tests/fixtures/config/: execution-test.conf  invalid_bool.conf  runtime-test.conf  unknown_key.conf  valid.conf
tests/fixtures/invalid/: bad_line_prefix.b2  snippet_before_section.b2
tests/fixtures/valid/: executable_generator.b2  llm_belief_conditioning.b2  llm_database_query.b2  llm_generator_editor.b2  llm_knowledge_query.b2  llm_prompt_library_query.b2  llm_prompt_mutator.b2  llm_tag_generator.b2  missing_concat_warning.b2  newline_prompt.b2  unsupported_instruction_warning.b2  video_generator.b2
